fixed align left for 650

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -2410,7 +2410,6 @@ p.comment-form-comment {
 	/* Floated content doesn't work well at this size */
 	.alignleft,
 	.alignright {
-		float: none;
 		margin-left: 0;
 		margin-right: 0;
 	}
